# django-inertiajs-vue

./: .gitignore  README.md  db.sqlite3  pyproject.toml
core/: settings.py  urls.py  views.py
templates/: base.html
web/: package-lock.json  package.json  vite.config.js
web/src/: main.js
web/src/pages/: About.vue  Home.vue
